# irontrust-analytics

./: .gitignore  README.md  td.json
apps/web/: package-lock.json  package.json
apps/web/src/: App copy.tsx  App.tsx  App_v2.tsx  main.tsx
apps/web/src/components/: AnalyticsSelector.tsx  Barchart.tsx  Echart.tsx  Plot.tsx  PlotCard.tsx  api.ts
apps/web/src/components/charts/: AvgEntropyChart.tsx  NxDomainChart.tsx  NxDomainChart_v1.tsx  PlaceholderChart.tsx  QnameHistChart.tsx  QnameLengthChart.tsx  QtypesChart.tsx  RCodeChart.tsx  SubdomainEntropyHistogramChart.tsx  TopDomainsChart.tsx  TopNClientsChart.tsx  TopQnamesChart.tsx  TopQueryTypesChart.tsx
apps/web/src/components/charts/v2/: HighEntropyQName.tsx  TopDomainsChart.tsx
apps/web/src/components/layout/: ChartCard.tsx  DashboardHeader.tsx  DashboardLayout.tsx  KPIGridChart.tsx  KPIGridChartv2.tsx
apps/web/src/components/layout/v2/: DashboardCard.tsx  DashboardGrid.tsx  DashboardSection.tsx  KPICard.tsx  KPIGrid.tsx  KPIGroup.tsx  dashboard.css
apps/web/src/hooks/: useAnalytics.ts
apps/web/src/pages/: AnalyticsPage.tsx  AnalyticsPage01.tsx  App.tsx  Chart.tsx  Dashboard.tsx  Dashboard_v2.tsx  QnameEntropyHistogram.tsx
apps/web/src/preprocessors/: transform.ts
apps/web/src/styles/: colorScale.ts
apps/web/src/types/: analytics.ts  index.ts  types.ts
apps/web/src/utils/: analytics.ts  chartRegistry.ts  colorScale.ts  dashboardColors.ts  entropyChartOption.ts  entropyStats.ts
jobs/emr_serverless/: README.md  pyproject.toml
jobs/emr_serverless/.devcontainer/: Dockerfile  devcontainer.json
jobs/emr_serverless/src/emr_jobs/: gold_transformer.py  silverTransformer.py
libs/analytics_core/: README.md  pyproject.toml
libs/analytics_core/src/analytics_core/: aggregations.py  df_utils.py  feature_engineering.py  histograms.py  udfs.py  udfs_v0.py  utils.py
libs/ml/: pyproject.toml
libs/parsers/: pyproject.toml
libs/parsers/src/parsers/: batch_parse_pcaps.py  parser.py  pcap_parse.py  pcap_parser.py
services/api_service/: README.md  pyproject.toml
services/api_service/src/api/: .env  main.py
services/api_service/src/api/analytics/: analytics.py
services/api_service/src/api/config/: app_config.py  template_registry.py
services/api_service/src/api/db/: athena.py
services/api_service/src/api/models/: models.py  query_results.py  v2.py
services/api_service/src/api/routers/v1/: routes.py  tenants.py
services/api_service/src/api/routers/v2/: routes.py
services/api_service/src/api/utils/: s3_reader.py
services/parser_service/: .dockerignore  Dockerfile  pyproject.toml
services/parser_service/src/parser_service/: main.py
services/parser_service/tests/: parser.txt
