[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Herbert Maosa <hmaosa@irontrustconsulting.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.1"
uvicorn = "^0.40.0"
boto3 = "^1.42.41"
jinja2 = "^3.1.6"
dotenv = "^0.9.9"
pyarrow = "^23.0"
pydantic ="^2.12.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
